--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,17 @@
             <type>pom</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.1</version>
+		</dependency>
     </dependencies>
 
     <build>
