--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,16 @@
             <type>pom</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+			<groupId>com.thetransactioncompany</groupId>
+			<artifactId>cors-filter</artifactId>
+			<version>2.4</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-moxy</artifactId>
+		</dependency>
     </dependencies>
 
     <build>
